# PCMC

./: Makefile  Makefile1  Makefile_1  Makefile_2  Makefile_3  Makefile_max  Makefile_work  Makefile_work10  Makefile_work2  Makefile_work3  Makefile_work6  Makefile_work8  README.md  collapsed_phase_kappa.eps  collapsed_phase_tau.eps  histogram.eps  histogram.gnu  init_session.sh  init_session2.sh  k_collapsed.gnu  main.cpp  mainAnalyzator.cpp  mainForTest  mainMPI_mac.cpp  mainOld  main_quantum  makefie2  pca  pcmc  polymerMC  polymer_attract_binary_updates.h  prob_distrib.h  scalingPicture_new.m~  t_collapsed.gnu
PCMC_lib/: CMakeLists.txt  Makefile
PCMC_lib/CMake/: PCMCconfigTemplate.cmake
PCMC_lib/documentation/: Doxyfile
PCMC_lib/documentation/html/: _double_well_8cpp.html  _double_well_8h.html  _double_well_rand_8cpp.html  _double_well_rand_8h.html  _double_well_rand_8h_source.html  _file_8cpp.html  _file_8h.html  _file_8h_source.html  _gauss_rand_8cpp.html  _gauss_rand_8h.html  _gauss_rand_8h_source.html  _hamiltonian_8cpp.html  _hamiltonian_8h.html  _hamiltonian_8h_source.html  _hopping_amplitude_calculator_8h.html  _hopping_amplitude_calculator_8h_source.html  _lennard_jones_8cpp.html  _lennard_jones_8h.html  _lennard_jones_8h_source.html  _p_c_amacros_8h.html  _p_c_amacros_8h_source.html  _polymer_8cpp.html  _polymer_8h.html  _polymer_8h_source.html  _polymer_energy_8h_source.html  _polymer_m_c_8cpp.html  _polymer_m_c_8h.html  _polymer_m_c_8h_source.html  _polymer_observable_8cpp.html  _polymer_observable_8h.html  _polymer_observable_8h_source.html  _polymer_quantum_8cpp.html  _polymer_quantum_8h.html  _polymer_quantum_8h_source.html  _random_generator_8cpp.html  _random_generator_8h.html  _random_generator_8h_source.html  _step_function_calculator_8cpp.html  _step_function_calculator_8h.html  _step_function_calculator_8h_source.html  (+111 more)
PCMC_lib/documentation/latex/: _double_well_8cpp.tex  _double_well_8h.tex  _double_well_rand_8cpp.tex  _double_well_rand_8h.tex  _file_8cpp.tex  _file_8h.tex  _gauss_rand_8cpp.tex  _gauss_rand_8h.tex  _hamiltonian_8cpp.tex  _hamiltonian_8h.tex  _hopping_amplitude_calculator_8h.tex  _lennard_jones_8cpp.tex  _lennard_jones_8h.tex  _p_c_amacros_8h.tex  _polymer_8cpp.tex  (+67 more)
PCMC_lib/include/: CMakeLists.txt  Dictionary.h  File.h  MonteCarlo.h  PCAmacros.h  Polymer.h  PolymerMC.h  PolymerObservable.h  Timer.h  Utilities.h  Vector.h
PCMC_lib/source/: .#MonteCarlo.cpp  Dictionary.cpp  File.cpp  MonteCarlo.cpp  Polymer.cpp  PolymerMC.cpp  PolymerObservable.cpp  Timer.cpp  Utilities.cpp  Vector.cpp
PCMC_lib/test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  pcmcTest
PCMCappKappaTau/: 1.pca  CMakeLists.txt  mainMPI.cpp
(+654 files in other folders)
