CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12.2)

PROJECT(PCMC)

SET(PCMC_MAJOR_VERSION 3)
SET(PCMC_MINOR_VERSION 0)
SET(PCMC_PATCH_VERSION 0)
SET(
    PCMC_VERSION
    ${PCMC_MAJOR_VERSION}.${PCMC_MINOR_VERSION}.${PCMC_PATCH_VERSION}
)

#Detect packages
FIND_PACKAGE(GSL REQUIRED)
INCLUDE_DIRECTORIES(${GSL_INCLUDE_DIRS})
LIST(APPEND PCMC_LIBRARIES ${GSL_LIBRARIES})

LIST(APPEND CMAKE_CXX_FLAGS "-std=c++11 -Wall -O3")

INCLUDE_DIRECTORIES(include/)
FILE(GLOB PCMC_SOURCE source/*)

ADD_LIBRARY(PCMC STATIC ${PCMC_SOURCE})
TARGET_LINK_LIBRARIES(PCMC ${PCMC_LIBRARIES})
SET_TARGET_PROPERTIES(PCMC PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})