CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12.2)

PROJECT(PCMC)

SET(PCMC_MAJOR_VERSION 3)
SET(PCMC_MINOR_VERSION 0)
SET(PCMC_PATCH_VERSION 0)
SET(
    PCMC_VERSION
    ${PCMC_MAJOR_VERSION}.${PCMC_MINOR_VERSION}.${PCMC_PATCH_VERSION}
)

ADD_SUBDIRECTORY(include)

LIST(APPEND CMAKE_CXX_FLAGS "-std=c++11 -Wall -O3")

#Detect packages
FIND_PACKAGE(GSL REQUIRED)
INCLUDE_DIRECTORIES(${GSL_INCLUDE_DIRS})
LIST(APPEND PCMC_LIBRARIES ${GSL_LIBRARIES})

INCLUDE_DIRECTORIES(include/)
FILE(GLOB_RECURSE PCMC_SOURCE source/*.cpp)

#Compile to static library
ADD_LIBRARY(pcmc STATIC ${PCMC_SOURCE})

#Compile to executable
#ADD_EXECUTABLE(Application ) ${PCMC_SOURCE})

TARGET_LINK_LIBRARIES(pcmc ${PCMC_LIBRARIES})
SET_TARGET_PROPERTIES(pcmc PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

###################################################################################
# Instalation
INSTALL(
    TARGETS pcmc
    LIBRARY DESTINATION lib/PCMC
    ARCHIVE DESTINATION lib/PCMC
)
#MESSAGE(${CMAKE_INSTALL_PREFIX})