CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12.2)

SET(APPLICATION_NAME polycarlo)

PROJECT(PCMCtest)
FIND_PACKAGE(PCMC REQUIRED)
FILE(GLOB SRC mainMPI.cpp)

LIST(APPEND CMAKE_CXX_FLAGS "-std=c++11 -Wall -O3")

ADD_EXECUTABLE(${APPLICATION_NAME} ${SRC})

TARGET_LINK_LIBRARIES(${APPLICATION_NAME} ${PCMC_LIBRARIES})

INSTALL(
    TARGETS polycarlo
    DESTINATION bin
)