CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12.2)

PROJECT(PCMCtest)

FIND_PACKAGE(GTest REQUIRED)
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})

FIND_PACKAGE(Threads REQUIRED)

FIND_PACKAGE(PCMC REQUIRED)
INCLUDE_DIRECTORIES(include/)

LIST(APPEND CMAKE_CXX_FLAGS "-std=c++11 -Wall -O3")

ENABLE_TESTING()

FILE(GLOB_RECURSE PCMC_TEST_SOURCE source/*.cpp)

ADD_EXECUTABLE(pcmcTest ${PCMC_TEST_SOURCE})

TARGET_LINK_LIBRARIES(pcmcTest ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${PCMC_LIBRARIES})
